1.1.3 2026-01-28
- feat: add README_fr.md for bilingual documentation support.
- doc: synchronize project structure links in README.md.
- doc: update README and README_fr.md to include MariaDB 11.8 support.

1.1.2 2026-01-28
- feat: standardize cluster naming convention to galera-* and repli-*.
- fix: centralize root credentials via .env in Makefile, docker-compose, and scripts.
- doc: document project-standard IP ranges in README.md.
- refactor: remove hardcoded rootpass from all orchestration assets.

1.0.15 2026-01-28
 - feat: standardize all technical comments and documentation to English.
 - feat: update governance rules (03_execution_rules.md) to enforce English-only policy.
 - fix: resolve unbound variable 'EXTRA_ARGS' in start_mariadb.sh affecting Galera joins.
 - refactor: translate all test scripts (replication, galera, haproxy) to English.
 - chore: translate Dockerfile and supervisor configuration to English.

1.0.14 2026-01-28

1.0.13 2026-01-16

1.0.11 2026-01-16
 - feat: adapt interactive_runner.py with interactive installation type selection (Standalone, Galera, Replication).
 - feat: add HTML report generation to test_config.sh under reports/ directory.
 - feat: add collective start, verify, and inject targets to Makefile for better runner integration.
 - update: enhance interactive runner HTML report to display installation type.

1.0.10 2026-01-16
 - feat: add new configuration and security test suites (test_config.sh, test_env.sh, test_security_ssl.sh, test_profiles.sh).
 - feat: integrate test-config target into Makefile for environment validation.
 - refactor: reorganize project structure (move scripts to scripts/, configs to conf/, and tests to tests/).
 - update: fix Makefile and Dockerfile to reflect new directory structure.
 - update: adjust documentation and test scripts for relative path changes.

1.0.9 2026-01-16
 - chore: migrate HISTORY.md into Changelog and remove HISTORY.md.

1.0.8 2026-01-16